[gd_scene load_steps=35 format=3 uid="uid://cu7luf5ysut4r"]

[ext_resource type="Script" path="res://scripts/rose_bloom.gd" id="1_rwlud"]
[ext_resource type="Texture2D" uid="uid://f5uxf7haeika" path="res://sprites/pvv_sunpea.png" id="2_0adwu"]
[ext_resource type="Texture2D" uid="uid://bhwyd3x5umc1j" path="res://sprites/pvv_rose.png" id="2_i61kj"]
[ext_resource type="PackedScene" uid="uid://kqjgpwrln2xx" path="res://scenes/progress_bar.tscn" id="3_bhyt2"]
[ext_resource type="PackedScene" uid="uid://dvy7lryr5q3ee" path="res://scenes/health_bar.tscn" id="4_galpe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ie72s"]
atlas = ExtResource("2_i61kj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvt0e"]
atlas = ExtResource("2_i61kj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dawi5"]
atlas = ExtResource("2_i61kj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua625"]
atlas = ExtResource("2_i61kj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq802"]
atlas = ExtResource("2_i61kj")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alxrs"]
atlas = ExtResource("2_i61kj")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdhba"]
atlas = ExtResource("2_i61kj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjfb8"]
atlas = ExtResource("2_i61kj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocj1i"]
atlas = ExtResource("2_i61kj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ark"]
atlas = ExtResource("2_i61kj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33mkd"]
atlas = ExtResource("2_i61kj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abjgo"]
atlas = ExtResource("2_i61kj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhsuu"]
atlas = ExtResource("2_i61kj")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxi0e"]
atlas = ExtResource("2_i61kj")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6pog"]
atlas = ExtResource("2_i61kj")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2tbd"]
atlas = ExtResource("2_i61kj")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvwqg"]
atlas = ExtResource("2_i61kj")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_847r8"]
atlas = ExtResource("2_i61kj")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dydde"]
atlas = ExtResource("2_0adwu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmbyo"]
atlas = ExtResource("2_0adwu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaa22"]
atlas = ExtResource("2_0adwu")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqqym"]
atlas = ExtResource("2_0adwu")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86f57"]
atlas = ExtResource("2_0adwu")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwqyx"]
atlas = ExtResource("2_0adwu")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crbfa"]
atlas = ExtResource("2_0adwu")
region = Rect2(224, 32, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nvrkn"]
load_path = "res://.godot/imported/pvz_sunpea.png-c8639a2bc98a9f289c016111b38f9280.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_vxk3g"]
atlas = SubResource("CompressedTexture2D_nvrkn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_oi3ol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie72s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvt0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dawi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua625")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq802")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alxrs")
}],
"loop": true,
"name": &"action",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdhba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocj1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ark")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33mkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abjgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhsuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxi0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6pog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2tbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvwqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_847r8")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.4,
"texture": SubResource("AtlasTexture_dydde")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xmbyo")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_iaa22")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_nqqym")
}, {
"duration": 2.1,
"texture": SubResource("AtlasTexture_86f57")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_iwqyx")
}, {
"duration": 0.9,
"texture": SubResource("AtlasTexture_crbfa")
}],
"loop": true,
"name": &"mini_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxk3g")
}],
"loop": true,
"name": &"seed",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u0ixn"]
radius = 4.0
height = 24.0

[node name="rose_bloom" type="Node2D"]
script = ExtResource("1_rwlud")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_oi3ol")
animation = &"action"
frame_progress = 0.919978
speed_scale = 0.8

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="sun_timer" type="Timer" parent="."]
process_callback = 0

[node name="timer_bar" parent="." instance=ExtResource("3_bhyt2")]
modulate = Color(0.509804, 0.823529, 0.509804, 1)
position = Vector2(-15, 8)
scale = Vector2(0.2, 0.2)

[node name="health_bar" parent="." instance=ExtResource("4_galpe")]
modulate = Color(0.960784, 0.25098, 0.298039, 1)
position = Vector2(-15, -15)
scale = Vector2(0.2, 0.2)

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_u0ixn")

[node name="time_up" type="Timer" parent="."]

[node name="time_up_bar" parent="." instance=ExtResource("3_bhyt2")]
position = Vector2(9, -15)
scale = Vector2(0.2, 0.2)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="sun_timer" to="." method="_on_sun_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="time_up" to="." method="_on_time_up_timeout"]
